test/fail/no-timer.mo
//MOC-FLAG -no-timer

actor {

    system func timer(_ : Nat64 -> ()) : async () {
  }

}
